--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <main>
             <div class="container-main">
-
+                <!-- Parte superiore -->
                 <div class="parte-superiore">
                     <div class="add first-add">
                         <span>Add Task</span>
@@ -28,7 +28,23 @@
                         <span>Add Section</span>
                     </div>
                 </div>
+                 <!-- Fine Parte superiore -->
+                <!-- Parte Inferiore -->
+                <div class="parte-inferiore">
+                    <div class="subtitle">
+                        <div class="bold-text">
+                            New Task
+                        </div>
+                        <div class="normal-text">
+                            Quarterly Newsletter
+                        </div>
+                        <div class="link">
+                            Editorial
+                        </div>
+                    </div>
 
+                </div>
+                <!-- Fine Parte inferiore -->
             </div>
 
         </main>
