--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <!-- Parte Inferiore -->
                 <div class="container-list">
                     <ul>
-                        <li class="bold">NewTask
+                        <li class="list-point">
+                            <span class="list-point-title">NewTask</span> 
                             <ul>
                                 <li>Quarterly Newsletter
                                     <span>Editorial</span>
@@ -41,25 +42,8 @@
                             </ul>
                         </li>
 
-
-                        <li class="bold">NewTask
-                            <ul>
-                                <li>Quarterly Newsletter
-                                    <span>Editorial</span>
-                                </li>
-                                <li>Quarterly Newsletter
-                                    <span>Editorial</span>
-                                </li>
-                                <li>Quarterly Newsletter
-                                    <span>Editorial</span>
-                                </li>
-                                <li>Quarterly Newsletter
-                                    <span>Editorial</span>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <li class="bold">NewTask
+                        <li class="list-point">
+                            <span class="list-point-title">NewTask</span> 
                             <ul>
                                 <li>Quarterly Newsletter
                                     <span>Editorial</span>
@@ -76,9 +60,24 @@
                             </ul>
                         </li>
 
+                        <li class="list-point">
+                            <span class="list-point-title">NewTask</span> 
+                            <ul>
+                                <li>Quarterly Newsletter
+                                    <span>Editorial</span>
+                                </li>
+                                <li>Quarterly Newsletter
+                                    <span>Editorial</span>
+                                </li>
+                                <li>Quarterly Newsletter
+                                    <span>Editorial</span>
+                                </li>
+                                <li>Quarterly Newsletter
+                                    <span>Editorial</span>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
-                    
-
                 </div>
                 
                 <!-- Fine Parte inferiore -->
