--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>TodoList</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -36,44 +39,44 @@
                 <div class="down">
                     <ul class="no-list-stile">
                         <li class="list-point">
-                            <span class="list-point-title">NewTask</span> 
+                            <span class="list-point-title">▼ NewTask</span> 
                             <ul class="no-list-stile">
-                                <li>Quarterly Newsletter
+                                <li>✅ Quarterly Newsletter
                                     <span class="bubble blue-bubble">Editorial</span>
                                 </li>
                             </ul>
                         </li>
 
                         <li class="list-point">
-                            <span class="list-point-title">Today</span> 
+                            <span class="list-point-title">▼ Today</span> 
                             <ul class="no-list-stile">
-                                <li>Recruiting blog post
+                                <li>✅ Recruiting blog post
                                     <span class="bubble blue-bubble">Editorial</span>
                                 </li>
-                                <li>Mobile app launch
+                                <li>✅ Mobile app launch
                                     <span class="bubble violet-bubble">Q1 Goals</span>
                                 </li>
-                                <li>Interview John H.
+                                <li>✖ Interview John H.
                                     <span class="bubble green-bubble">Recruiting</span>
                                 </li>
-                                <li>Summit update to mobile storefronts
+                                <li>✅ Summit update to mobile storefronts
                                     <span class="bubble orange-bubble">Mobile</span>
                                 </li>
                             </ul>
                         </li>
 
                         <li class="list-point">
-                            <span class="list-point-title">Upcoming</span> 
+                            <span class="list-point-title">▼ Upcoming</span> 
                             <ul class="no-list-stile">
-                                <li>Schedule meeting with Alex
+                                <li>✖ Schedule meeting with Alex
                                 </li>
-                                <li>Homepage refresh
+                                <li>✅ Homepage refresh
                                     <span class="bubble pink-bubble">Website</span>
                                 </li>
-                                <li>Onboard new Sales team members
+                                <li>✅ Onboard new Sales team members
                                     <span class="bubble greenyellow-bubble">Sales</span>
                                 </li>
-                                <li>Review editorial calendar
+                                <li>✅ Review editorial calendar
                                     <span class="bubble blue-bubble">Editorial</span>
                                 </li>
                             </ul>
